# serializer version: 1
# name: test_entities[number.qube_1_tapw_timeprogram_dhwsetp_nolinq-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65.0,
      'min': 40.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.qube_1_tapw_timeprogram_dhwsetp_nolinq',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'DHW setpoint (Modbus)',
    'platform': 'qube_heatpump',
    'previous_unique_id': None,
    'suggested_object_id': 'qube_1_tapw_timeprogram_dhwsetp_nolinq',
    'supported_features': 0,
    'translation_key': 'tapw_timeprogram_dhwsetp_nolinq',
    'unique_id': '1.2.3.4_1_tapw_timeprogram_dhwsetp_nolinq_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.qube_1_tapw_timeprogram_dhwsetp_nolinq-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'qube 1 DHW setpoint (Modbus)',
      'max': 65.0,
      'min': 40.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.5,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.qube_1_tapw_timeprogram_dhwsetp_nolinq',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '45.0',
  })
# ---
# name: test_entities[number.qube_1_usr_pid_coolsetp-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 25.0,
      'min': 7.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.qube_1_usr_pid_coolsetp',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Cooling setpoint (no curve)',
    'platform': 'qube_heatpump',
    'previous_unique_id': None,
    'suggested_object_id': 'qube_1_usr_pid_coolsetp',
    'supported_features': 0,
    'translation_key': 'usr_pid_coolsetp',
    'unique_id': '1.2.3.4_1_usr_pid_coolsetp_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.qube_1_usr_pid_coolsetp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'qube 1 Cooling setpoint (no curve)',
      'max': 25.0,
      'min': 7.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.5,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.qube_1_usr_pid_coolsetp',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '45.0',
  })
# ---
# name: test_entities[number.qube_1_usr_pid_heatsetp-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 65.0,
      'min': 20.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.5,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'number.qube_1_usr_pid_heatsetp',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.TEMPERATURE: 'temperature'>,
    'original_icon': None,
    'original_name': 'Heating setpoint (no curve)',
    'platform': 'qube_heatpump',
    'previous_unique_id': None,
    'suggested_object_id': 'qube_1_usr_pid_heatsetp',
    'supported_features': 0,
    'translation_key': 'usr_pid_heatsetp',
    'unique_id': '1.2.3.4_1_usr_pid_heatsetp_setpoint',
    'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
  })
# ---
# name: test_entities[number.qube_1_usr_pid_heatsetp-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'temperature',
      'friendly_name': 'qube 1 Heating setpoint (no curve)',
      'max': 65.0,
      'min': 20.0,
      'mode': <NumberMode.BOX: 'box'>,
      'step': 0.5,
      'unit_of_measurement': <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.qube_1_usr_pid_heatsetp',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '45.0',
  })
# ---
